--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
-  </script>
+  <script type="text/javascript" src="index.js"></script>
 
   <title>Nessler - Write your nes</title>
 </head>
@@ -25,34 +23,49 @@
   <nav class="navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="/client/icons-hero.png" alt="" width="30" height="24" class="d-inline-block align-top">
+        <img src="https://img.icons8.com/color/96/000000/nintendo-entertainment-system.png" alt="" width="30"
+          height="24" class="d-inline-block align-top">
         NESSLER
       </a>
     </div>
   </nav>
 
-  <div class="container-sm">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm-4 justify-content-around">
+      </div>
+      <div class="col-sm-4 justify-content-around">
+        <form>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Nessler</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <button type="button" class="btn btn-primary mybtn" onclick="insertNessler()">
+              <img src="https://img.icons8.com/color/96/000000/nintendo-entertainment-system.png" alt="" width="30"
+                height="24" class="d-inline-block align-top">
+              Send Nessler
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="col-sm-4 justify-content-around">
+      </div>
+    </div>
+
     <!-- Content here -->
-    <form>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+
   </div>
 
-  <!-- Bootstrap JS -->
-  <script src="/client/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap and my JS -->
+  <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+  </script>
+  <script type="text/javascript" src="/client/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
