--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/client/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/client/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -62,7 +60,7 @@
 
       </div>
       <div class="col-sm-4 justify-content-around">
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mx-auto" style="width: 22rem;">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -79,12 +77,13 @@
     </div>
   </div>
 
+  <img src="/client/img/loading.gif" class="loading-nes">
+
   <!-- Bootstrap and my JS -->
   <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
   </script>
-  <script type="text/javascript" src="/client/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" src="index.js"></script>
 
 </body>
