--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-sm-4 justify-content-around">
       </div>
-      <div class="col-sm-4 justify-content-around">
+      <div id="form-nes" class="col-sm-4 justify-content-around">
         <form class="nes-form" id="nes-form">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Name</label>
@@ -60,7 +60,7 @@
 
       </div>
       <div class="col-sm-4 justify-content-around">
-        <div class="card mx-auto" style="width: 22rem;">
+        <div id="card-nes" class="card mx-auto" style="width: 22rem;">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -77,7 +77,7 @@
     </div>
   </div>
 
-  <img src="/client/img/loading.gif" class="loading-nes">
+  <img id="loading-nes" src="/client/img/loading.gif" class="loading-nes">
 
   <!-- Bootstrap and my JS -->
   <script type="text/javascript"
