updated last fixes

--- a/client/index.html
+++ b/client/index.html
@@ -59,15 +59,12 @@
       <div class="col-sm-4">
 
       </div>
-      <div class="col-sm-4 justify-content-around">
+      <div id="div-class" class="col-sm-4 justify-content-around">
         <div id="card-nes" class="card mx-auto" style="width: 22rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          <div id="card-body" class="card-body">
+            <h5 id="card-title" class="card-title">Card title</h5>
+            <p id="card-text" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
           </div>
         </div>
       </div>
